--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -716,7 +716,7 @@ rapids_export(
 # * shared test/bench headers ------------------------------------------------
 
 if(BUILD_TESTS OR BUILD_PRIMS_BENCH)
-  include(internal/CMakeLists.txt)e
+  include(internal/CMakeLists.txt)
 endif()
 
 # ##################################################################################################
