[FEA] support of prefiltered brute force

--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -194,6 +194,7 @@ if(BUILD_TESTS)
     test/ext_headers/raft_neighbors_refine.cu
     test/ext_headers/raft_neighbors_detail_ivf_flat_search.cu
     test/ext_headers/raft_linalg_detail_coalesced_reduction.cu
+    test/ext_headers/raft_sparse_matrix_detail_select_k.cu
     test/ext_headers/raft_spatial_knn_detail_ball_cover_registers.cu
     test/ext_headers/raft_neighbors_detail_ivf_flat_interleaved_scan.cu
     test/ext_headers/raft_neighbors_detail_ivf_pq_compute_similarity.cu
