--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -113,30 +113,7 @@ if(BUILD_TESTS)
     NAME
     CORE_TEST
     PATH
-    core/bitset.cu
-    core/device_resources_manager.cpp
-    core/device_setter.cpp
-    core/logger.cpp
-    core/math_device.cu
-    core/math_host.cpp
-    core/operators_device.cu
-    core/operators_host.cpp
-    core/handle.cpp
-    core/interruptible.cu
-    core/nvtx.cpp
-    core/mdarray.cu
-    core/mdbuffer.cu
-    core/mdspan_copy.cpp
-    core/mdspan_copy.cu
-    core/mdspan_utils.cu
-    core/numpy_serializer.cu
-    core/memory_type.cpp
-    core/sparse_matrix.cu
-    core/sparse_matrix.cpp
-    core/span.cpp
-    core/span.cu
-    core/stream_view.cpp
-    core/temporary_device_buffer.cu
+    core/bitmap.cu
     test.cpp
     LIB
     EXPLICIT_INSTANTIATE_ONLY
